--- a/index.html
+++ b/index.html
@@ -121,32 +121,32 @@
             <ul class="selector-list">
                 <a href="./main.html?code=JavaScript&number=1" target="_self" rel="noopener noreferrer">
                     <li class="selector-item1">
-                        <div class="selector-name">1. DOM元素选择方法</div>
+                        <div class="selector-name">1. DOM 基础概念与选择器</div>
                     </li>
                 </a>
                 <a href="./main.html?code=JavaScript&number=2" target="_self" rel="noopener noreferrer">
                     <li class="selector-item1">
-                        <div class="selector-name">2. 操作元素内容</div>
+                        <div class="selector-name">2. DOM 节点操作</div>
                     </li>
                 </a>
                 <a href="./main.html?code=JavaScript&number=3" target="_self" rel="noopener noreferrer">
                     <li class="selector-item1">
-                        <div class="selector-name">3. 操作元素属性</div>
+                        <div class="selector-name">3. </div>
                     </li>
                 </a>
                 <a href="./main.html?code=JavaScript&number=4" target="_self" rel="noopener noreferrer">
                     <li class="selector-item1">
-                        <div class="selector-name">4. 操作元素样式</div>
+                        <div class="selector-name">4. </div>
                     </li>
                 </a>
                 <a href="./main.html?code=JavaScript&number=5" target="_self" rel="noopener noreferrer">
                     <li class="selector-item1">
-                        <div class="selector-name">5. 事件处理</div>
+                        <div class="selector-name">5. </div>
                     </li>
                 </a>
                 <a href="./main.html?code=JavaScript&number=6" target="_self" rel="noopener noreferrer">
                     <li class="selector-item1">
-                        <div class="selector-name">6. 创建、添加和删除元素</div>
+                        <div class="selector-name">6. </div>
                     </li>
                 </a>
             </ul>
