--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <meta name="robots" content="noindex,nofollow">
 <link rel="stylesheet" href="style.css">
 <script src="script1.js" defer></script>
-<link rel="prefetch" href="./main.html">
+<link rel="prefetch" href="./main-HTML.html">
+<link rel="prefetch" href="./main-CSS.html">
+<link rel="prefetch" href="./main-JavaScript.html">
 <link rel="prefetch" href="./script2.js" as="script">
+<link rel="prefetch" href="./script3.js" as="script">
 <link rel="icon" href="https://chat.deepseek.com/favicon.svg" type="image/x-icon">
 <title>网页学习笔记</title>
 </head>
@@ -153,4 +156,5 @@
         </aside>
     </div>
 </body>
+
 </html>
