--- a/main-HTML.html
+++ b/main-HTML.html
@@ -800,6 +800,7 @@
                     <p><span class="code-comment">&lt;!-- 9. 空链接(占位符) --&gt;</span></p>
                     <p>&lt;<span class="code-keyword">a</span> <span class="code-property">href</span>=<span class="code-value">"#"</span>&gt;返回顶部&lt;<span class="code-keyword">/a</span>&gt;</p>
                     <p>&lt;<span class="code-keyword">a</span> <span class="code-property">href</span>=<span class="code-value">"javascript:void(0)"</span>&gt;无操作链接&lt;<span class="code-keyword">/a</span>&gt;</p>
+                    <p>&lt;<span class="code-keyword">a</span> <span class="code-property">href</span>=<span class="code-value">"javascript:;"</span>&gt;无操作链接&lt;<span class="code-keyword">/a</span>&gt;</p>
                 </div>
 
                 <h3>常用属性:</h3>
