--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </a>
                 <a href="./main-JavaScript.html?code=JavaScript&number=3" target="_self" rel="noopener noreferrer">
                     <li class="selector-item1">
-                        <div class="selector-name">3. </div>
+                        <div class="selector-name">3. 事件处理系统</div>
                     </li>
                 </a>
                 <a href="./main-JavaScript.html?code=JavaScript&number=4" target="_self" rel="noopener noreferrer">
@@ -156,5 +156,4 @@
         </aside>
     </div>
 </body>
-
 </html>
